--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap"
+      href="https://fonts.googleapis.com/css?family=DM+Sans:400,700&display=swap"
     />
     <link
       rel="stylesheet"
